size episodesList fixed

--- a/src/components/episodesList/episodesList.module.css
+++ b/src/components/episodesList/episodesList.module.css
@@ -16,7 +16,7 @@
 }
 
 .EposidesList__main_mobile {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   margin: 1rem 0;
   border: 1px solid grey;
