--- a/src/templates/podcastTemplate/podcastTemplate.module.css
+++ b/src/templates/podcastTemplate/podcastTemplate.module.css
@@ -52,7 +52,16 @@
 
 .Podcast__paragraph_main {
   font-size: calc(.85rem - 15%);
+  line-height: 1.25rem;
 }
+
+
+.Podcast__paragraph_main:first-of-type::first-letter{
+  font-size: 2.5rem;
+  float: left;
+  margin:.75rem .15em 0 0;
+}
+
 
 .Italic {
   font-style: italic;
