--- a/src/components/episodesList/episodesList.module.css
+++ b/src/components/episodesList/episodesList.module.css
@@ -2,7 +2,7 @@
   width: 7.25rem;
   height: auto;
   margin-top: .5rem;
-  border: 1px solid grey;
+  border: 1px solid var(--primary_grey);
   border-radius: 3px;
   -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
@@ -19,7 +19,7 @@
   max-width: 100%;
   height: auto;
   margin: 1rem 0;
-  border: 1px solid grey;
+  border: 1px solid var(--primary_grey);
   border-radius: 3px;
   -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
@@ -46,7 +46,7 @@
 }
 
 .List__element_mobile {
-  color: grey;
+  color: var(--primary_grey);
   height: 1rem;
   padding: 0 .5rem;
   margin: 0;
@@ -65,7 +65,7 @@
   display: flex;
   justify-content: flex-start;
   text-decoration: none;
-  color: grey;
+  color: var(--primary_grey);
   font-size: .75rem;
   font-weight: 500;
 }
