--- a/src/components/podcastsList/podcastsList.module.css
+++ b/src/components/podcastsList/podcastsList.module.css
@@ -1,18 +1,47 @@
 .PodcastList__main_mobile {
   overflow-y: auto;
   -webkit-overflow-y-scrolling: touch;
-  -webkit-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
-  -ms-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
-  -o-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
-  -moz-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
-  mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
+  -webkit-mask-image: linear-gradient(
+    to top,
+    transparent,
+    black 20px,
+    black 90%,
+    transparent
+  );
+  -ms-mask-image: linear-gradient(
+    to top,
+    transparent,
+    black 20px,
+    black 90%,
+    transparent
+  );
+  -o-mask-image: linear-gradient(
+    to top,
+    transparent,
+    black 20px,
+    black 90%,
+    transparent
+  );
+  -moz-mask-image: linear-gradient(
+    to top,
+    transparent,
+    black 20px,
+    black 90%,
+    transparent
+  );
+  mask-image: linear-gradient(
+    to top,
+    transparent,
+    black 20px,
+    black 90%,
+    transparent
+  );
   height: 5.5rem;
   max-width: 17.5rem;
   text-align: center;
-  
 }
 
-.PodcastsList__list_mobile{
+.PodcastsList__list_mobile {
   width: 100%;
 }
 
@@ -23,51 +52,50 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width:100%;
+  width: 100%;
 }
 
 .PodcastsList__list_mobile li a {
- text-decoration: none;
-  color: grey;
-  font-size: .85rem;
+  text-decoration: none;
+  color: var(--primary_grey);
+  font-size: 0.85rem;
   font-weight: 500;
   width: auto;
   height: auto;
 }
 
-
-@media(min-width: 600px){
-.PodcastsList__main.Open {
-  width: 12rem;
-  height: 10.5rem;
-  margin-top: .5rem;
-  border: 1px solid grey;
-  border-radius: 3px;
-  z-index: 2;
-  -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
-  -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
-  box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
-  position: absolute;
-  top: 2.5rem;
-  right: 8.45rem;
-  overflow-y: auto;
-  opacity: 1;
+@media (min-width: 600px) {
+  .PodcastsList__main.Open {
+    width: 12rem;
+    height: 10.5rem;
+    margin-top: 0.5rem;
+    border: 1px solid var(--primary_grey);
+    border-radius: 3px;
+    z-index: 2;
+    -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
+    -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
+    box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
+    position: absolute;
+    top: 2.5rem;
+    right: 8.45rem;
+    overflow-y: auto;
+    opacity: 1;
+  }
 }
-}
 
-.PodcastsList__main.Close{
+.PodcastsList__main.Close {
   height: 0rem;
   opacity: 1;
-  transition: height .3s;
-  animation: list_animation_backwards .2s ease-in forwards;
-  -webkit-animation: list_animation_backwards .2s ease-in forwards;
+  transition: height 0.3s;
+  animation: list_animation_backwards 0.2s ease-in forwards;
+  -webkit-animation: list_animation_backwards 0.2s ease-in forwards;
 }
 
-.PodcastsList__main{
+.PodcastsList__main {
   width: 12rem;
   height: 10.5rem;
-  margin-top: .5rem;
-  border: 1px solid grey;
+  margin-top: 0.5rem;
+  border: 1px solid var(--primary_grey);
   border-radius: 3px;
   z-index: 2;
   -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
@@ -80,16 +108,16 @@
   opacity: 1;
 }
 
-
 .PodcastsList__list {
   margin: 0 auto;
-  display: flex; 
+  display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
 }
 
-.Author, .Author_mobile {
+.Author,
+.Author_mobile {
   list-style: none;
   height: 4.5rem;
   width: 100%;
@@ -97,23 +125,21 @@
   display: flex;
   justify-content: flex-start;
   text-decoration: none;
-  color: grey;
-  font-size: .75rem;
+  color: var(--primary_grey);
+  font-size: 0.75rem;
   font-weight: 500;
   padding: 0 0.5rem;
 }
 
-
-.Author_mobile.Clicked{
+.Author_mobile.Clicked {
   color: var(main_black);
   font-weight: 600;
 }
 
-.Author.Clicked{
+.Author.Clicked {
   background-color: var(--second_grey);
   color: var(--main_white);
 }
-
 
 .PodcastsList__list li:hover {
   color: var(--main_black);
@@ -122,17 +148,10 @@
 }
 
 .Indicator {
-  color: grey;
+  color: var(--primary_grey);
   margin-left: 0.35rem;
   font-weight: 600;
 }
-.PodcastsList__list li:hover .Indicator{
+.PodcastsList__list li:hover .Indicator {
   color: var(--main_black);
 }
-
-
-
-
-
-
-
