position of episodesList desktop fixed

--- a/src/components/episodesList/episodesList.module.css
+++ b/src/components/episodesList/episodesList.module.css
@@ -8,8 +8,9 @@
   box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   position: absolute;
   z-index:2;
-  top: 13rem;
+  top: 13.5rem;
   right: 1.2125rem;
+  transform: translate(-1%, -1%);
   overflow-y: auto;
   background-color: var(--main_white);
 }
