--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,7 @@
   --button_border: #be0000;
   --button_background: #ff7c7c;
   --main_white: #fafafa;
+  --primary_black: black;
   --primary_white: white;
   --primary_grey: grey;
   --ministry_grey: #919ba2;
