intersection observer on podcastTemplate

--- a/src/templates/podcastTemplate/podcastTemplate.module.css
+++ b/src/templates/podcastTemplate/podcastTemplate.module.css
@@ -91,3 +91,11 @@
 .Podcast__player {
   margin: 1rem 0 0 auto;
 }
+
+.Template__observer_helper{
+  width: 100vw;
+  height: 6.5rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
