--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -3,7 +3,7 @@
     height: 100vh;
     background-color: var(--primary_white);
     animation: loader 3s ease-in-out;
-    -webkit-animation: loader 5s ease-in-out;
+    -webkit-animation: loader 3.5s ease-in-out forwards;
     opacity: 1;
     display: flex;
     align-items: center;
