--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -73,14 +73,14 @@
 .Footer_line {
   width: 11rem;
   height: 2px;
-  margin: 0 auto;
+  margin: 1rem auto;
   background:linear-gradient(90deg, rgba(39,39,39,1) 1%, rgba(78,78,78,0.758140756302521) 13%, rgba(163,161,161,0.6180847338935574) 42%, rgba(163,161,161,0.6180847338935574) 58%, rgba(78,78,78,0.7553396358543417) 87%, rgba(39,39,39,1) 99%);
 
 }
 .Footer__text  {
   color: var(--third_grey); 
   font-size: .5rem;
-  margin-bottom: 0;
+  margin-bottom: .5rem;
 }
 
 @media(min-width: 300px){
