--- a/src/templates/podcastTemplate/podcastTemplate.module.css
+++ b/src/templates/podcastTemplate/podcastTemplate.module.css
@@ -6,9 +6,82 @@
   background-color: var(--main_white);
 }
 
-@media (min-height: 755px) {
-  .Template__layout {
-    height: 100vh;
+.Template__observer_helper {
+  width: 100vw;
+  height: 6.5rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.Header__conintainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Template__layout a:first-of-type {
+  margin: 0 auto;
+  display: none;
+}
+
+@media (min-height: 555px) {
+  p.Home {
+    font-size: 1rem;
+    transition: color 0.2s;
+  }
+
+  p.Home::before {
+    content: "\140A";
+    position: relative;
+    top: 1px;
+    left: 0;
+    font-weight: 900;
+  }
+
+  .Template__layout a:first-of-type {
+    margin: 0 auto;
+    display: inline-block;
+    
+  }
+
+  .Header__conintainer {
+    justify-content: space-between;
+  }
+
+  p.Home {
+    font-size: 1rem;
+    transition: color 0.2s;
+  }
+
+  p.Home::before {
+    content: "\140A";
+    position: relative;
+    top: 1px;
+    left: 0;
+    font-weight: 900;
+  }
+}
+
+@media(max-width: 554px){
+  p.Home {
+    font-size: 1rem;
+    transition: color 0.2s;
+    display: none;
+  }
+
+  p.Home::before {
+    content: "\140A";
+    position: relative;
+    top: 1px;
+    left: 0;
+    font-weight: 900;
+    display: none;
+  }
+
+  .Template__layout a:first-of-type{
+    display: none;
   }
 }
 
@@ -31,41 +104,18 @@
   margin-left: -320px;
 }
 
-.Header__conintainer{
-  width: 75%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  
-}
-
-.Header__conintainer a{
+.Header__conintainer a {
   text-decoration: none;
-  color: var(--second_grey);
+  color: var(--main_black);
   font-weight: 600;
-  
-}
-p.Home{
-font-size: 1rem;
-transition: color .2s;
 }
 
-p.Home::before{
-  content:"\140A";
-  position: relative;
-  top: 1px;
-  left: 0;
-  font-weight: 900;
+.Header__conintainer a:hover p.Home {
+  color: var(--second_grey);
 }
 
-
-.Header__conintainer a:hover p.Home{
-  color: var(--primary_black);
-}
-
-.Header__conintainer p{
+.Header__conintainer p {
   margin-bottom: 0;
-
 }
 .Header__layout.Scroll {
   height: 4.25rem;
@@ -126,12 +176,4 @@ p.Home::before{
 
 .Podcast__player {
   margin: 1rem 0 0 auto;
-}
-
-.Template__observer_helper{
-  width: 100vw;
-  height: 6.5rem;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
