--- a/src/templates/podcastTemplate/podcastTemplate.module.css
+++ b/src/templates/podcastTemplate/podcastTemplate.module.css
@@ -125,6 +125,7 @@
   box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
   transition: ease 0.4s;
   border-bottom: 0.25px solid rgb(201, 201, 201);
+  z-index: 1;
 }
 
 .Template__text {
