--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -14,12 +14,14 @@
   svg.Loader__logo {
     width: 10.5rem;
     height: 10.5rem;
+    transform: translateY(-12.5%);
   }
 }
 @media (min-width: 401px) {
   svg.Loader__logo {
     width: 13.5rem;
     height: 13.5rem;
+    transform: translateY(-12.5%);
   }
 }
 @media (min-width: 800px) {
