--- a/src/components/podcastsSection/podcastSection.module.css
+++ b/src/components/podcastsSection/podcastSection.module.css
@@ -89,9 +89,11 @@
 }
 
 .Link__prev  {
-  transform: translate(-12.5%, -25%);
+  transform: translate(-12.5%, 2.5%);
 }
-
+.Link__next {
+  transform: translateY(2.5%);
+}
 
 .Disabled{
   opacity: 0.2;
