--- a/src/components/hamburgerMenu/hamburgerMenu.module.css
+++ b/src/components/hamburgerMenu/hamburgerMenu.module.css
@@ -8,16 +8,26 @@
   z-index: 10;
 }
 
-
 .Navigation__hamburger {
-  width: 2.25rem;
-  height: 2rem;
+  width: 3.25rem;
+  height: 3.25rem;
+  border-radius: 50%;
+  background-color: var(--main_grey);
+  border: 1px solid var(--main_grey);
   z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
+  -webkit-box-shadow: 1px 1px 4px -1px rgba(107,107,107,1);
+-moz-box-shadow: 1px 1px 4px -1px rgba(107,107,107,1);
+box-shadow: 1px 1px 4px -1px rgba(107,107,107,1);
+}
+
+.Navigation__hamburger:hover {
+  background-color: var(--main_white);
+  border: 1px solid transparent;
 }
 
 .BurgerLine {
@@ -37,7 +47,7 @@
   height: 0.225rem;
   background-color: var(--main_black);
   border-radius: 2.5px;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 
 .BurgerLine::before {
@@ -54,13 +64,17 @@
 }
 
 .Navigation__hamburger.closeBurger .BurgerLine::before {
-  transform: rotate(45deg) translate(15px, -15px);
+  transform: rotate(45deg) translate(17.55px, -17.55px);
 }
 
 .Navigation__hamburger.closeBurger .BurgerLine::after {
-  transform: rotate(-45deg) translate(15px, 15px);
+  transform: rotate(-45deg) translate(17.55px, 17.55px);
 }
 
+.Navigation__hamburger.closeBurger .Navigation__hamburger {
+  width: 2rem;
+  height: 2rem;
+}
 
 @media (min-width: 600px) {
   .Navigation__hamburger_container {
